config/eks/deployment-api-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bucca-api-prod
  labels:
    app: bucca-api-prod
  namespace: backend-prod
spec:
  progressDeadlineSeconds: 600
  replicas: 1 # Number of replicas
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: bucca-api-prod  # Ensure this matches the template labels
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: bucca-api-prod 
    spec:
      containers:
      - name: bucca-api-prod
        image: swr.af-south-1.myhuaweicloud.com/secureid_digital_repos/bucca-api-prod:latest
        imagePullPolicy: Always
        command: ["python"]
        args: ["manage.py", "runserver", "0.0.0.0:8000"]
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: 50m
            memory: 0.5Gi
          limits:
            cpu: 100m
            memory: 1Gi
      imagePullSecrets:
      - name: default-secret
      dnsPolicy: ClusterFirst

---
apiVersion: v1
kind: Service
metadata:
  name: bucca-api-prod-svc
  namespace: backend-prod
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8000
  selector:
    app: bucca-api-prod
